--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -43,6 +43,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   color: var(--color-grey-dark-2);
+  padding: 8rem 0;
 
   width: 100%;
   min-height: 100vh;
