--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,6 +1,6 @@
 .container {
   max-width: 120rem;
-  margin: 8rem auto;
+  margin: 0 auto;
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
 
@@ -8,9 +8,14 @@
 }
 
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-2);
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .content {
