--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -3,15 +3,13 @@
   margin: 0 auto;
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
-
-  min-height: 50rem;
 }
 
 .header {
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
 
   display: flex;
   align-items: center;
@@ -34,6 +32,5 @@
 }
 
 .hotel-view {
-  background-color: orangered;
   flex: 1;
 }
