--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,6 +3,11 @@
   margin: 0 auto;
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
+
+  @media only screen and (max-width: $bp-largest) {
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .header {
@@ -14,12 +19,22 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media only screen and (max-width: $bp-smallest) {
+    flex-wrap: wrap;
+    align-content: space-around;
+    height: 12rem;
+  }
 }
 
 .content {
   display: flex;
   width: 100%;
   height: 100%;
+
+  @media only screen and (max-width: $bp-medium) {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -42,6 +57,14 @@
   padding: 4.5rem;
   background-color: var(--color-grey-light-2);
   border-bottom: var(--line);
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 3rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+  }
 }
 
 .description {
@@ -50,6 +73,16 @@
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    margin-right: 0;
+    margin-bottom: 3rem;
+  }
 }
 
 .user-reviews {
